FIX topic, group view filters on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -243,39 +243,6 @@ input {
   display: flex;
   flex-direction: column;
   padding: 0;
-
-
-  &.mobile_filters_selection {
-    &.dropdown_active {
-      .selection {
-        svg {
-          transform: rotate(180deg);
-        }
-      }
-    }
-
-    .selection {
-      border: none;
-      font-weight: 600;
-      padding: 8px 16px;
-
-      .selected_item {
-        font-weight: 600;
-      }
-
-      .btn_medium_plain {
-        margin-top: 0;
-      }
-    }
-
-    .options {
-      position: relative;
-      height: max-content;
-      max-height: max-content;
-      margin-top: 0;
-    }
-  }
-
   .selection {
     position: relative;
     cursor: pointer;
@@ -364,6 +331,51 @@ input {
     }
   }
 
+  &.mobile_filters_selection {
+    &.dropdown_active {
+      .selection {
+        svg {
+          transform: rotate(180deg);
+        }
+      }
+
+      .options {
+        &.filter_options {
+          max-height: max-content;
+          height: 100%;
+
+      padding: 0 8px 16px 8px;
+        }
+      }
+    }
+
+    .selection {
+      border: none;
+      font-weight: 600;
+      padding: 8px 16px;
+
+      .selected_item {
+        font-weight: 600;
+      }
+
+      .btn_medium_plain {
+        margin-top: 0;
+      }
+    }
+
+    .options {
+      display: flex;
+      position: relative;
+      height: max-content;
+      max-height: 0;
+      height: 0;
+      gap: 8px;
+      margin-top: 0;
+      transition: height 0.2s ease-in;
+      padding: 0;
+      overflow-y: hidden;
+    }
+  }
   .button_options {
     border-radius: 8px;
 
@@ -1588,5 +1600,44 @@ tour-item-template {
     border-radius: 24px;
     aspect-ratio: 1;
     object-fit: cover;
+  }
+}
+
+.mobile_filters_wrap {
+  display: flex;
+  position: fixed;
+  bottom: -200px;
+  padding: 16px;
+  left: 0;
+  background-color: var(--color-surfaces);
+  z-index: 99999;
+  width: 100%;
+  max-height: 100%;
+  border-radius: 16px 16px 0 0;
+  box-shadow: 0px 8px 20px 0px rgba(220, 231, 240, 0.3),
+  0px 12px 16px 0px rgba(50, 85, 112, 0.1);
+  transition: bottom 0.2s ease-in;
+  visibility: hidden;
+  &.active {
+    bottom: 0;
+    visibility: visible;
+  }
+
+  .options {
+    display: flex;
+    flex-direction: column;
+    background: var(--color-surfaces);
+    z-index: 9;
+    gap: 8px;
+    min-width: max-content;
+    position: relative;
+    width: 100%;
+    overflow-y: auto;
+
+    .option {
+      display: flex;
+      gap: 8px;
+      align-items: center;
+    }
   }
 }
